--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
 
-    <h1 style="text-align: center;">Customer Survey Form</h1>
+    <h1 style="text-align: center;  color: white;">Customer Survey Form</h1>
 
 <div class="container" >
     
